--- a/frontend/front/src/index.css
+++ b/frontend/front/src/index.css
@@ -4,7 +4,7 @@
 @theme {
   --font-display: "Poppins", "sans-serif";
   --breakpoint-3xl: 1920px;
-  --color-primary: #875cf5;
+  --color-primary: #6366f1;
 }
 
 @layer base {
@@ -16,4 +16,12 @@
     background-color: #fcfbfc;
     overflow-x: hidden;
   }
+}
+
+.input-box {
+  @apply w-full flex justify-between gap-3 text-sm text-black bg-slate-100 rounded px-4 py-3 mb-4 mt-3 border border-slate-200 outline-none;
+}
+
+.btn-primary {
+  @apply w-full text-sm font-medium text-white bg-indigo-500 shadow-lg shadow-purple-600/5 p-[10px] rounded-md my-1 hover:bg-indigo-600/15 hover:text-indigo-600 cursor-pointer;
 }
